Cut off long history queries instead of allowing scroll, fix wrong corner color between two scrollbars.

--- a/src/main/resources/SearchToolWindowDark.css
+++ b/src/main/resources/SearchToolWindowDark.css
@@ -139,6 +139,11 @@ blockquote > :last-child {
     height: 12px;
     background-color: inherit;
 }
+
+::-webkit-scrollbar-corner {
+    background-color: #2c2c2c;
+}
+
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border: 2px solid #2c2c2c;
